--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta name="viewport" content="initial-scale=1">
 	<title>Rent 2 Own Housing List | Home</title>
+<meta property="og:image" content="jpg/1cead6f551d68ad8a365c801b38d0b54bd740746.jpg" />
 
 
 	<link href="css/css2c34e.css?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet">
